--- a/package.json
+++ b/package.json
@@ -19,13 +19,14 @@
     "express": "^4.18.1",
     "ffmpeg": "^0.0.4",
     "ffmpeg-static": "^5.1.0",
+    "heroku": "^7.3.0",
     "libsodium-wrappers": "^0.7.10",
     "mongoose": "^6.5.3",
     "topgg-autoposter": "^2.0.1",
     "ytdl-core": "^4.10.0"
   },
   "scripts": {
-    "start": "node index.js"
+    "start": "node ."
   },
   "author": "UmutBayraktar",
   "license": "ISC",
